Fixed bug #47997 (stream_copy_to_stream returns 1 on empty streams)